pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-257-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/257-list_items.md
---
• one


[33m two
[0m
